# bulk-rename

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: renamer.py
src/bulk_rename/: __init__.py  __main__.py  cli.py
tests/: test_renamer.py
